--- a/package.json
+++ b/package.json
@@ -5,5 +5,17 @@
   "main": "index.js",
   "repository": "git@github.com:newbornfrontender/relift-html-try.git",
   "author": "Infant Frontender <newbornfrontender@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "format": "prettier --write **/*.{html,css,js,json,md}",
+    "serve": "serve"
+  },
+  "devDependencies": {
+    "@commitlint/config-conventional": "7.6.0",
+    "commitlint": "7.6.1",
+    "husky": "2.3.0",
+    "lint-staged": "8.1.7",
+    "prettier": "1.17.1",
+    "serve": "11.0.0"
+  }
 }
