ci: change branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ deploy:
   provider: pages
   skip_cleanup: true
   github_token: $GITHUB_TOKEN
-  local_dir: public
+  on:
+    branch: master
 
 notifications:
   email:
