--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,3 +1,3 @@
 {
-  "**/*.{html,css,js,json,md}": ["prettier --write", "git add"]
+  "**/*.{html,css,js,json,yml,md}": ["prettier --write", "git add"]
 }
