--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,17 @@ language: node_js
 node_js:
   - '12'
 
+cache:
+  yarn: true
+  directories:
+    - node_modules
+
+before_script:
+  - yarn
+
+script:
+  - yarn format
+
 deploy:
   provider: pages
   skip_cleanup: true
